# vite_nannou_template

./: README.md  index.html  index.js  package.json  pnpm-lock.yaml  rsw.toml  vite.config.js
.github/workflows/: release.yml
assets/: index.1db44a7e.js  index.2454e09a.js  index.e1f2a479.js  index.f018a6ea.js  nannou_1.1566d938.js  nannou_1.61dc00d0.js  nannou_1.adde1473.js  nannou_1_bg.390fa429.wasm  nannou_1_bg.4600d9a8.wasm  nannou_1_bg.8affd04d.wasm  nannou_2.62ce37fa.js  nannou_2.63bf0e3c.js  nannou_2.db0ca532.js  nannou_2_bg.bbd8a723.wasm  nannou_2_bg.e52ff842.wasm  nannou_2_bg.f4a46826.wasm
crates/nannou_1/: Cargo.toml
crates/nannou_1/src/: app.rs  lib.rs  sketch.rs
crates/nannou_2/: Cargo.toml
crates/nannou_2/src/: main.rs  sketch.rs
crates/template/: Cargo.toml
crates/template/src/: main.rs  sketch.rs
