[package]
name = "nannou_x"
version = "0.1.0"
authors = ["cxreiff <dev@cooperreiff.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.37"
async-std = { version = "1.12.0", features = ["unstable"] }
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.nannou]
version = "0.18.1"
git = "https://github.com/nannou-org/nannou.git"
rev = "287be8a4d075b17332ca0bf34649f5d25e751c00"
features = [
    "wasm-experimental",
]

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
futures = "0.1.27"
js-sys = "0.3.22"

[profile.release]
lto = true
opt-level = "s"
